--- a/templates/result.html
+++ b/templates/result.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+    <form action={% url 'delete' %} method='GET' >
+        <button type='submit' id="sort-btn"> Delete </button>
+    </form>
     <img src="{{ image.image.url }}">
 </body>
 </html>
