static problem resolved

--- a/templates/home.html
+++ b/templates/home.html
@@ -272,13 +272,15 @@ html {
 
 </style>
 -->
-<!--
+
 <head>
     <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/css/styles.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'assets/fonts/font-awesome.min.css' %}">
+    <!--
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700" />
-
+    -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>Home - Wikishop</title>
@@ -328,12 +330,6 @@ html {
     <script src="{% static 'assets/js/jquery.min.js' %}"></script>
     <script src="{% static 'assets/js/script.min.js' %}"></script>
     <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
-</body>
--->
-<link rel="stylesheet" href="{% static 'css.css' %}">
-<body>
-    <h2>hi</h2>
-    <img src="{% static 'assets_123/img/downloads-bg.jpg' %}">
 </body>
 
 
